# Adventure550

./: .gitignore  .prettierrc  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Makefile  README.md  actions1.c  actions2.c  datime.c  init.c  main.c  misc.c  misc.h  score.c  task-list.md
cmake/: RunSaveResumeTest.cmake  RunScoreRegression.cmake  RunScriptedGameTest.cmake  RunSmokeTest.cmake
docs/: BUILD_INSTRUCTIONS.md  Colossal Cave Adventure.md  FEATURE_LIST.md  MERMAID_QUICK_REF.md  MERMAID_VIEWING_GUIDE.md  discovered-clear-paths.md  discovered-map-mermaid.md  discovered-treasure-route.md  task-list.md
include/: README.md
maps/: adventure-maps-mermaid.md
src/: README.md  actions1.c  actions2.c  main.c  misc.c
tests/: cross_room_inventory_input.txt  discovered_clean_route_input.txt  inventory_roundtrip_input.txt  map1_surface_route_input.txt  resume_session_input.txt  save_session_input.txt  score_quit_input.txt  take_all_drop_all_input.txt
tools/: build_all_targets.py  install.py  map_probe.py
